hubot/hubot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hubot
  namespace: hubot-ns
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: hubot
      app.kubernetes.io/instance: chatops-demo-bot
  template:
    metadata:
      annotations:
      labels:
        app.kubernetes.io/name: hubot
        app.kubernetes.io/instance: chatops-demo-bot
    spec:
      serviceAccountName: hubot-sa
      containers:
        - name: hubot
          image: "dalelane/hubot:70"
          securityContext:
            runAsUser: 501
          tty: true
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /hubot/version
              port: http
          readinessProbe:
            httpGet:
              path: /hubot/version
              port: http
