hubot/redis-ui-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: redis
  namespace: hubot-ns
spec:
  to:
    kind: Service
    name: redis-cluster-ui
    weight: 100
  port:
    targetPort: ui
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
